Replaced string with constants, added final modifier in some places